<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_questions"
            android:icon="@drawable/ic_nav_my_questions"
            android:title="@string/nav_my_questions"/>
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_nav_my_orders"
            android:title="@string/nav_my_orders"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_nav_help"
                android:title="@string/nav_help"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/nav_settings"/>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/nav_about_us"/>
        </menu>
    </item>

</menu>
